# simple-graph

./: Cargo.toml  README.md  REQUIREMENTS-ru.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: args.rs  error.rs  main.rs
simple-graph/: Cargo.toml  README.md
simple-graph/src/: error.rs  graph.rs  lib.rs  tgf.rs
simple-graph/test_input/: default.tgf  moscow.tgf
