[workspace]
resolver = "3"
members = [
    "app",
    "simple-graph",
]

[workspace.package]
version = "0.1.2"
authors = ["StackOverflowExcept1on"]
edition = "2024"
repository = "https://github.com/StackOverflowExcept1on/simple-graph"
license = "MIT"

[workspace.dependencies]
argh = "0.1.13"
colored = "3.0.0"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
thiserror = "2.0"

simple-graph = { version = "0.1.2", path = "simple-graph" }
