[package]
name = "simple-graph"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Graph library with ability to serialize/deserialize Trivial Graph Format"
repository.workspace = true
license.workspace = true
keywords = ["graph", "breadth-first-search", "depth-first-search"]
categories = ["data-structures", "parsing"]

[dependencies]
linked-hash-map.workspace = true
linked_hash_set.workspace = true
thiserror.workspace = true
